# burn-onnx

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT-GUIDE.md  NOTICES.md  README.md  SIMPLIFIER-TODO.md  SUPPORTED-ONNX-OPS.md  _typos.toml
crates/burn-import/: Cargo.toml  README.md
crates/burn-import/src/: lib.rs
crates/burn-onnx/: Cargo.toml  README.md
crates/burn-onnx/src/: model_gen.rs
crates/burn-onnx/src/burn/: argument_helpers.rs  codegen.rs  graph.rs  node_codegen.rs  node_traits.rs  scope.rs
crates/model-checks/clip-vit-b-32-text/: Cargo.toml  build.rs  get_model.py
crates/model-checks/clip-vit-b-32-text/src/: main.rs
crates/model-checks/clip-vit-b-32-vision/: Cargo.toml  build.rs  get_model.py
crates/model-checks/clip-vit-b-32-vision/src/: main.rs
crates/model-checks/mediapipe-face-detector/: Cargo.toml  README.md
crates/model-checks/mediapipe-face-detector/src/: main.rs
crates/model-checks/rf-detr/: Cargo.toml  build.rs  get_model.py
crates/model-checks/rf-detr/src/: main.rs
crates/model-checks/silero-vad/: Cargo.toml  build.rs  get_model.py  validate_model.py
crates/model-checks/silero-vad/src/: main.rs
crates/onnx-ir/: Cargo.toml  README.md
crates/onnx-ir/benches/: generate_bench_model.py
crates/onnx-ir/src/: graph_state.rs  lib.rs  pipeline.rs  processor.rs  proto_conversion.rs  registry.rs  tensor_store.rs
crates/onnx-ir/src/ir/: argument.rs  attribute.rs  node.rs  tensor_data_ext.rs
crates/onnx-ir/src/node/: abs.rs  acos.rs  acosh.rs  argmax.rs  argmin.rs  arithmetic.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  attention.rs  avg_pool1d.rs  avg_pool2d.rs  batch_norm.rs  bernoulli.rs  cast.rs  ceil.rs  celu.rs  clip.rs  col2im.rs  comparison.rs  concat.rs  constant.rs  constant_of_shape.rs  conv1d.rs  conv2d.rs  conv3d.rs  conv_transpose1d.rs  conv_transpose2d.rs  conv_transpose3d.rs  deform_conv.rs  depth_to_space.rs  dropout.rs  elementwise.rs  elu.rs  exp.rs  expand.rs  eye_like.rs  flatten.rs  floor.rs  (+70 more)
crates/onnx-ir/src/phases/: node_conversion.rs  post_processing.rs  type_inference.rs
crates/onnx-ir/src/protos/: onnx.proto
crates/onnx-ir/src/simplify/: coalesce_attention.rs  constant_fold.rs  constant_shape.rs  dead_nodes.rs  idempotent.rs  identity_element.rs  mod.rs  permute_reshape.rs  redundant_nodes.rs
crates/onnx-ir/tests/: README.md  edge_cases.rs  external_data.rs  infrastructure.rs  noop_elimination.rs  simplification.rs  test_utils.rs
crates/onnx-ir/tests/fixtures/: constant_fold_blocked.onnx  constant_fold_cascade.onnx  constant_fold_cast.onnx  constant_fold_chain.onnx  constant_fold_concat.onnx  constant_fold_sqrt.onnx  noop_cast_different_type.onnx  noop_cast_same_type.onnx  prescaled_sdpa.onnx  symbolic_batch_dim.onnx
crates/onnx-ir/tests/opset_compliance/: helpers.rs  opset_01.rs  opset_02.rs  opset_03.rs  opset_04.rs  opset_05.rs  opset_06.rs  opset_07.rs  opset_08.rs  opset_09.rs  opset_10.rs  opset_11.rs  opset_12.rs  opset_13.rs  opset_14.rs  opset_15.rs  opset_16.rs  opset_17.rs  opset_18.rs  opset_19.rs  opset_20.rs  opset_21.rs  opset_22.rs  opset_23.rs  opset_24.rs
crates/onnx-ir/tests/scripts/: diagnostic_test.py  external_data.py  gen_opset_compliance.py  gen_rust_tests.py  generate_all_constants_used.py  generate_all_dtypes.py  generate_all_dynamic_shapes.py  generate_arg_types.py  generate_basic_model.py  generate_branching.py  generate_circular_preferences.py  generate_constant_fold.py  generate_constant_in_output.py  generate_constant_lifting.py  generate_constant_multiple_refs.py  generate_constants.py  generate_data_types.py  generate_deep_chain.py  generate_diamond_pattern.py  generate_disconnected_subgraphs.py  generate_edge_cases.py  generate_empty_graph.py  generate_empty_output_names.py  generate_gemm_linear.py  generate_high_rank_tensors.py  generate_identity.py  generate_incompatible_broadcast.py  generate_large_constants.py  generate_matmul_dynamic_weights.py  generate_mixed_rank_broadcasting.py  generate_mixed_value_sources.py  generate_multi_io.py  generate_no_initializers.py  generate_node_multiple_outputs_partial_use.py  generate_non_topological_order.py  generate_noop.py  generate_only_constants.py  generate_optional_input_clip.py  generate_passthrough.py  generate_prescaled_sdpa.py  (+11 more)
crates/onnx-tests/: Cargo.toml  README.md  build.rs
crates/onnx-tests/tests/: test_mod.rs
crates/onnx-tests/tests/abs/: abs.onnx  abs.py
crates/onnx-tests/tests/acos/: acos.onnx  acos.py  mod.rs
crates/onnx-tests/tests/acosh/: acosh.onnx  acosh.py  mod.rs
crates/onnx-tests/tests/add/: add.onnx  add.py  add_argmax_with_shape.onnx  add_argmax_with_shape.py  add_broadcast.onnx  add_broadcast.py  add_int.onnx  add_int.py  add_shape.onnx  add_shape.py  add_shape_tensor.onnx  add_shape_tensor.py  add_tensor_with_shape.onnx  add_tensor_with_shape.py
crates/onnx-tests/tests/and/: and.onnx  and.py  and_broadcast.onnx  and_broadcast.py  and_scalar.onnx  and_scalar.py  and_scalar_tensor.py
crates/onnx-tests/tests/argmax/: argmax.onnx  argmax.py  argmax_1d.onnx  argmax_1d.py  argmax_both_keepdims.onnx  argmax_both_keepdims.py
crates/onnx-tests/tests/argmin/: argmin.onnx  argmin.py  argmin_1d.onnx  argmin_1d.py  argmin_both_keepdims.onnx  argmin_both_keepdims.py
crates/onnx-tests/tests/asin/: asin.onnx  asin.py  mod.rs
crates/onnx-tests/tests/asinh/: asinh.onnx  asinh.py  mod.rs
crates/onnx-tests/tests/atan/: atan.onnx  atan.py  mod.rs
crates/onnx-tests/tests/atanh/: atanh.onnx  atanh.py  mod.rs
crates/onnx-tests/tests/attention/: attention_3d.onnx  attention_3d.py  attention_4d.onnx  attention_4d.py  attention_attn_mask_bool.onnx  attention_attn_mask_bool.py  attention_attn_mask_float.onnx  attention_attn_mask_float.py  attention_attn_mask_int.onnx  attention_attn_mask_int.py  attention_cache.onnx  attention_cache.py  attention_custom_scale.onnx  (+13 more)
examples/image-classification-web/: Cargo.toml  README.md  index.html  index.js
examples/image-classification-web/src/: web.rs
examples/onnx-inference/: Cargo.toml  README.md
examples/onnx-inference/pytorch/: mnist.py
(+1136 files in other folders)
