[package]
authors = [
    "Dilshod Tadjibaev (@antimora)",
    "Nathaniel Simard (@nathanielsimard)",
]
description = "Library for importing ONNX models into the Burn framework"
edition.workspace = true
license.workspace = true
name = "burn-onnx"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn-onnx/tree/main/crates/burn-onnx"
documentation = "https://docs.rs/burn-onnx"
version.workspace = true

default-run = "onnx2burn"

[lints]
workspace = true

[features]
default = ["mmap"]
mmap = ["onnx-ir/mmap"]

[dependencies]
onnx-ir = { path = "../onnx-ir", version = "=0.21.0", default-features = false }

burn = { workspace = true, features = ["std"] }
burn-ndarray = { workspace = true }
burn-store = { workspace = true, features = [
    "std",
    "burnpack",
] }

derive-new = { workspace = true }
log = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rust-format = { workspace = true, features = ["pretty_please", "post_process"] }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "default",
    "fmt",
    "env-filter",
] }
syn = { workspace = true, features = ["parsing"] }

[dev-dependencies]
insta = { workspace = true }

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]
