[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
edition.workspace = true
license = "MIT OR Apache-2.0"
name = "image-classification-web"
publish = false
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
burn = { workspace = true, default-features = false, features = [
    "ndarray", "webgpu",
] }
burn-store = { workspace = true, default-features = false, features = ["burnpack"] }

log = { workspace = true }
serde = { workspace = true }
console_error_panic_hook = "0.1"

# Wasm dependencies
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
wasm-logger = "0.2"
web-time = "1.1.0"

[build-dependencies]
# Used to generate code from ONNX model
burn-onnx = { path = "../../crates/burn-onnx", default-features = false }
