[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
edition.workspace = true
license.workspace = true
name = "onnx-inference"
publish = false
version.workspace = true

[lints]
workspace = true

[dependencies]
burn = { workspace = true, features = ["ndarray", "dataset", "vision"] }
burn-store = { workspace = true, features = ["std", "burnpack"] }
serde = { workspace = true }

[build-dependencies]
burn-onnx = { path = "../../crates/burn-onnx" }
