[package]
name = "burn-onnx-model-checks-clip-vit-b-32-text"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[features]
default = ["tch"]
ndarray = []
tch = []
wgpu = []
metal = []

[dependencies]
burn = { workspace = true, features = [
    "ndarray",
    "tch",
    "wgpu",
    "metal",
] }
burn-store = { workspace = true, features = ["std", "burnpack", "pytorch"] }

[build-dependencies]
burn-onnx = { path = "../../burn-onnx" }
