[package]
name = "burn-onnx-model-checks-clip-vit-b-32-vision"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[workspace.dependencies]
burn = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "44bbbe8c2cf10784fe3275f9a9c9933732b600e4" }
burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "44bbbe8c2cf10784fe3275f9a9c9933732b600e4" }

[features]
default = ["tch"]
ndarray = []
tch = []
wgpu = []
metal = []

[dependencies]
burn = { workspace = true, features = [
    "ndarray",
    "tch",
    "wgpu",
    "metal",
] }
burn-store = { workspace = true, features = ["std", "burnpack", "pytorch"] }

[build-dependencies]
burn-onnx = { path = "../../burn-onnx" }
