[package]
name = "burn-onnx-model-checks-clip-vit-b-32-vision"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[workspace.dependencies]
burn = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "e3f02f9c10c3bc16c5405064b2638ffbe079d51f" }
burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "e3f02f9c10c3bc16c5405064b2638ffbe079d51f" }

[features]
default = ["ndarray"]
ndarray = ["burn/ndarray"]
tch = ["burn/tch"]
wgpu = ["burn/wgpu"]
metal = ["burn/metal"]

[dependencies]
burn = { workspace = true }
burn-store = { workspace = true, features = ["std", "burnpack", "pytorch"] }
model-checks-common = { path = "../common" }

[build-dependencies]
burn-onnx = { path = "../../burn-onnx" }
model-checks-common = { path = "../common" }
