[package]
name = "burn-onnx-model-checks-mediapipe-face-detector"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[workspace.dependencies]
burn = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "8bfa8f753bcccbbe59c489c9885a19ab4dd0c8f0" }
burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "8bfa8f753bcccbbe59c489c9885a19ab4dd0c8f0" }

[features]
default = ["ndarray"]
ndarray = ["burn/ndarray"]
tch = ["burn/tch"]
wgpu = ["burn/wgpu"]
metal = ["burn/metal"]

[dependencies]
burn = { workspace = true }
burn-store = { workspace = true, features = ["std", "burnpack", "pytorch"] }
model-checks-common = { path = "../common" }

[build-dependencies]
burn-onnx = { path = "../../burn-onnx" }
model-checks-common = { path = "../common" }
