[package]
name = "burn-onnx-model-checks-rf-detr"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[workspace.dependencies]
burn = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "bd991fe52c94faef0cb52dcc92816323a053ad1c" }
burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "bd991fe52c94faef0cb52dcc92816323a053ad1c" }

[features]
default = ["ndarray"]
ndarray = []
tch = []
wgpu = []
metal = []

[dependencies]
burn = { workspace = true, features = [
    "ndarray",
    "tch",
    "wgpu",
    "metal",
] }
burn-store = { workspace = true, features = ["std", "burnpack", "pytorch"] }

[build-dependencies]
burn-onnx = { path = "../../burn-onnx" }
