[package]
name = "burn-onnx-model-checks-silero-vad"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[features]
default = ["ndarray"]
ndarray = []
tch = []
wgpu = []
metal = []

[dependencies]
burn = { workspace = true, features = [
    "ndarray",
    "tch",
    "wgpu",
    "metal",
] }
burn-store = { workspace = true, features = ["std", "burnpack"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
burn-onnx = { path = "../../burn-onnx" }
