[package]
name = "burn-onnx-model-checks-silero-vad"
version = "0.1.0"
edition = "2024"
publish = false


[features]
default = ["ndarray"]
ndarray = ["burn/ndarray"]
tch = ["burn/tch"]
wgpu = ["burn/wgpu"]
metal = ["burn/metal"]

[dependencies]
burn = { workspace = true }
burn-store = { workspace = true, features = ["std", "burnpack"] }
model-checks-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
burn-onnx = { path = "../../burn-onnx" }
model-checks-common = { path = "../common" }
